# live-photo

./: .env.example  .gitignore  CLAUDE.md  README.md  build.py  dedup.py  live-photo.spec  main.py  pipeline.py  pyproject.toml  state.py
docs/superpowers/specs/: 2026-05-28-unified-flow-design.md
preflight/: verify_cli.py  verify_livephoto.py
services/: __init__.py  gpt_image.py  livephoto.py  seedance.py
static/: index.html
