[project]
name = "live-photo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "pillow-heif>=0.20.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.2.2",
    "socksio>=1.0.0",
    "makelive>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"

[tool.ruff.lint]
select = ["E", "F", "I"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
